--- a/doggle-webapp/src/App.css
+++ b/doggle-webapp/src/App.css
@@ -14,12 +14,12 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  /* min-height: 100vh; */
-  display: flex;
+  background-color: #30435d;
+  min-height: 94vh;
+  /* display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  align-items: top;
+  justify-content: center; */
   font-size: calc(10px + 2vmin);
   color: white;
 }
@@ -36,3 +36,13 @@
     transform: rotate(360deg);
   }
 }
+
+.App-body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+  min-height: 40vh;
+} 
