--- a/doggle-webapp/src/Main Pages/LoadingScreen.css
+++ b/doggle-webapp/src/Main Pages/LoadingScreen.css
@@ -8,3 +8,15 @@
 .submessage {
   font-size: small;
 }
+
+.loading_wheel {
+  width: 10rem;
+  height: 10rem;
+}
+
+.App-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
