bugfix: fixed an issue where the carousel changes width when scrolling

--- a/doggle-webapp/src/Components/SuggestedImages/SuggestedImages.css
+++ b/doggle-webapp/src/Components/SuggestedImages/SuggestedImages.css
@@ -4,3 +4,7 @@
   width: auto; /* Let the width adjust to maintain aspect ratio */
   cursor: pointer;
 }
+
+.suggested_carousel {
+  width: 100%;
+}
