updated about page + responsive pop up image buttons

--- a/doggle-webapp/src/Encylopedia Page/Encyclopedia.css
+++ b/doggle-webapp/src/Encylopedia Page/Encyclopedia.css
@@ -17,7 +17,11 @@
 }
 
 .card {
-  margin: 0.5rem;
+  margin: 1rem;
+}
+
+.card:hover {
+  transform: translateY(-5px); /* Adjust the value to control the amount of pop-up */
 }
 
 .card img {
