--- a/doggle-webapp/src/Components/SuggestedImages/SuggestedImages.css
+++ b/doggle-webapp/src/Components/SuggestedImages/SuggestedImages.css
@@ -8,4 +8,10 @@
 .suggested_carousel {
   width: 100%;
   height: 40vh;
+  padding-top: 5% !important;
+  padding-bottom: 9% !important;
+}
+
+.suggestion {
+  padding-bottom: 1.5% !important;
 }
