--- a/doggle-webapp/src/Components/SuggestedImages/SuggestedImages.css
+++ b/doggle-webapp/src/Components/SuggestedImages/SuggestedImages.css
@@ -7,7 +7,7 @@
 
 .suggested_carousel {
   width: 100%;
-  height: 40vh;
+  min-height: 40vh;
   padding-top: 5% !important;
   padding-bottom: 9% !important;
 }
