--- a/doggle-webapp/src/App.css
+++ b/doggle-webapp/src/App.css
@@ -14,12 +14,8 @@
 }
 
 .App-header {
-  background-color: #30435d;
+  background-color: #4c6383;
   min-height: 94vh;
-  /* display: flex;
-  flex-direction: column;
-  align-items: top;
-  justify-content: center; */
   font-size: calc(10px + 2vmin);
   color: white;
 }
